--- a/.github/workflows/test-python-script.yml
+++ b/.github/workflows/test-python-script.yml
@@ -13,19 +13,17 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: hkim-Mac
     strategy:
       # 뭔지 모르겠음.
       # fail-fast: false
-      matrix:
-        python-version: ["3.10"]
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+    - uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.10.4'
+        cache: 'pip'
     - name: run python code
       run: |
         python main.py
