--- a/.github/workflows/test-python-script.yml
+++ b/.github/workflows/test-python-script.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build:
-    runs-on: hkim-Mac
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v3
