--- a/.github/workflows/test-python-script.yml
+++ b/.github/workflows/test-python-script.yml
@@ -19,6 +19,8 @@ jobs:
     - uses: actions/setup-python@v3
       with:
         python-version: '3.10.4'
+      env:
+          AGENT_TOOLSDIRECTORY: /Users/runner/hostedtoolcache
     - name: run python code
       run: |
         python main.py
