--- a/.github/workflows/test-python-script.yml
+++ b/.github/workflows/test-python-script.yml
@@ -21,6 +21,9 @@ jobs:
         python-version: '3.8'
       env:
           AGENT_TOOLSDIRECTORY: /Users/runner/hostedtoolcache
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
     - name: run python code
       run: |
         python main.py
