--- a/.github/workflows/test-python-script.yml
+++ b/.github/workflows/test-python-script.yml
@@ -16,6 +16,8 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
-    - name: run python code
+    - name: run simple scripts
       run: |
-        python main.py
+        echo Hello World!
+        sleep 5
+        echo Goodbye World!
