--- a/.github/workflows/test-python-script.yml
+++ b/.github/workflows/test-python-script.yml
@@ -16,13 +16,17 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/setup-python@v3
     - name: run simple scripts
-      run: |
-        echo Hello World!
-        sleep 5
-        echo Goodbye World!
-        whoami
-        pwd
-        cd
-        pwd
-        python test.py
+    with:
+      python-version: '3.9'
+      cache: 'pip'
+    - run: |
+      echo Hello World!
+      sleep 5
+      echo Goodbye World!
+      whoami
+      pwd
+      cd
+      pwd
+      python test.py
