--- a/.github/workflows/test-python-script.yml
+++ b/.github/workflows/test-python-script.yml
@@ -16,13 +16,7 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
-    - name: Install pipenv
-      run: pipx install pipenv
     - uses: actions/setup-python@v3
       with:
         python-version: '3.9'
-        cache: 'pipenv'
-        cache-dependency-path: |
-          server/app/Pipfile.lock
-          __test__/app/Pipfile.lock
-    - run: pipenv install
+        cache: 'pip'
