--- a/.github/workflows/test-python-script.yml
+++ b/.github/workflows/test-python-script.yml
@@ -4,7 +4,7 @@
 name: 'test-python-hosted-runners'
 
 on:
-  if: github.repository == 'hyeonkimmm/github_action'  
+  workflow_dispatch:
   push:
     branches: [ main ]
   pull_request:
@@ -12,6 +12,7 @@ on:
 
 jobs:
   build:
+    if: github.repository == 'hyeonkimmm/github_action'
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
